# Meta-CreationPower

./: .gitignore  AGENT_INTEGRATION_GUIDE.md  ELR安装程序.bat  LICENSE  PowerShell5_Syntax_Guide.md  README-Meta-CreationPower.md  README.md  TechArt_Hammer_Designer_QT.md  auto_convert_word_to_md.ps1  convert_docx_simple.ps1  convert_docx_to_md.ps1  convert_docx_to_md_simple.ps1  convert_docx_with_portable_python.ps1  convert_word_basic.bat  convert_word_to_md_pure_ps.ps1  el_cscc_archive.json  elr-state.json  elr-word-reader.ps1  requirements.txt  run_convert.bat  run_convert_english.bat  run_project.ps1  run_test.bat  setup.py  simple_test.py  tatus  test_basic.py  test_basic_elr.bat  test_elr_adaptation.ps1  test_elr_api.py  test_elr_connection.py  test_elr_converter.bat  test_env.py  test_project.py  test_terminal_output.ps1  test_voice_reg.py  true_docx_converter.py  verify_project.py  启动ELR任务栏服务.lnk  安装ELR任务栏服务.bat  (+1 more)
ELR-Desktop-Assistant/: CMakeLists.txt  DesktopWidget.cpp  DesktopWidget.h  ELRClient.cpp  ELRClient.h  ELRDesktopAssistant.cpp  ELRDesktopAssistant.h  ELRDesktopAssistant.spec  README.md  README_Python.md  TrayIcon.cpp  TrayIcon.h  build.bat  build.cmd  build_with_cli.py  build_with_full_path.py  build_with_icon.py  build_with_python_path.py  build_with_site_packages.py  check_icon.py  clear_icon_cache.ps1  convert_png_to_ico.py  elr_desktop_assistant.py  elr_desktop_assistant.spec  elr_icons.qrc  generate_icon.py  main.cpp
ELR-Desktop-Assistant/docs/: ARC-EL-DEV-20260318-代码织梦者-001-DGM.md  ELR-Desktop-Assistant最小MVP开发总结.md
agent_embedding/: README.md  (+5 more)
(+493 files in other folders)
